refactor: inclusão despesas compartilhadas
criada a pesquisa por despesas compartilhadas entre os usuarios, nova rota
